# mom

./: .cursorrules  .gitignore  .local-ci-cache  AGENTS.md  ARCH_PRESERVE.md  CLAUDE.md  Cargo.toml  README.md  audit.toml  dockworker.toml  flake.nix
.ai/: lefthook.toml
.github/: copilot-instructions.md  system-instruction.md
.github/workflows/: ci.yml
crates/mom-core/: Cargo.toml
crates/mom-core/src/: context_pack.rs  facts.rs  lib.rs  task.rs
crates/mom-embeddings/: Cargo.toml
crates/mom-embeddings/src/: embed.rs  lib.rs  mistral.rs  ollama.rs  openai.rs
crates/mom-grpc/: Cargo.toml  build.rs
crates/mom-grpc/examples/: grpc_benchmark.rs  grpc_client.rs
crates/mom-grpc/src/: lib.rs
crates/mom-service/: Cargo.toml
crates/mom-service/benches/: load_test.rs  performance_benchmarks.rs
crates/mom-service/src/: lib.rs  links.rs  main.rs  recall.rs  tenant.rs
crates/mom-sources/: Cargo.toml
crates/mom-sources/src/: connectors.rs  datafabric.rs  http.rs  lib.rs  oxidizedgraph.rs  oxidizedrag.rs  scheduler.rs
crates/mom-store-surrealdb/: Cargo.toml
crates/mom-store-surrealdb/src/: hybrid.rs  lib.rs  links.rs
crates/mom-store-surrealdb/tests/: us10_facts.rs  us7_tenant_isolation.rs
deploy/: README.md
deploy/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
deploy/overlays/gke/: kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml
deploy/overlays/orbstack/: kustomization.yaml
docs/: DESIGN.md  GRPC_GUIDE.md  MEMORY_RELATIONSHIPS.md  PHASE_1_MVP.md  TENANT_ISOLATION.md  USER_STORIES.md
examples/go_client/: client.go
protos/: memory.proto
