[workspace]
members = [
  "crates/mom-core",
  "crates/mom-store-surrealdb",
  "crates/mom-service",
  "crates/mom-grpc",
  "crates/mom-embeddings", "crates/mom-sources",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lornu-ai"]
license = "Apache-2.0"
repository = "https://github.com/lornu-ai/mom"
