[package]
name = "mom-sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-source memory ingestion connectors for MOM"

[dependencies]
mom-core = { path = "../mom-core" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
